--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,6 @@
 mountpoints:
-  /: https://adobe.sharepoint.com/sites/AEMDemos/Shared%20Documents/sites/esaas-demos/catalan-sanity-xwalk-godrejenterprises-00
+  /:
+    url: "https://author-p137653-e1386691.adobeaemcloud.com//bin/franklin.delivery/aemdemos/catalan-sanity-xwalk-godrejenterprises-00/main"
+    type: "markup"
+    suffix: ".html"
+  
